Thu Feb 14 10:05:57 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http:  Do not handle Content-Encoding when the user sets
	  Accept-Encoding.  This allows users to handle Content-Encoding for
	  themselves.  This restores backwards-compatibility with Ruby 1.x.
	  [ruby-trunk - Bug #7831]
	* lib/net/http/generic_request.rb:  ditto.
	* lib/net/http/response.rb:  ditto
	* test/net/http/test_http.rb:  Test for the above.
	* test/net/http/test_http_request.rb:  ditto.
	* test/net/http/test_httpresponse.rb:  ditto.

Thu Feb 14 08:18:47 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: don't define HAVE_SA_LEN and HAVE_SA_LEN.
	  use HAVE_STRUCT_SOCKADDR_SA_LEN and HAVE_STRUCT_SOCKADDR_IN_SIN_LEN
	  instead.

Wed Feb 13 20:59:48 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: don't define socklen_t here, just test.

	* ext/socket/rubysocket.h: define socklen_t if not available.

Wed Feb 13 18:37:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew): skip prepending modules and return the method bound
	  on the given class.  [ruby-core:52160] [Bug #7836]

Wed Feb 13 18:11:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_original_name): new methods Method#original_name and
	  UnboundMethod#original_name.  [ruby-core:52048] [Bug #7806]
	  [EXPERIMENTAL]

	* proc.c (method_inspect): show the given name primarily, and
	  original_id if aliased.  [ruby-core:52048] [Bug #7806]

Wed Feb 13 17:56:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (warnflags): disable -Werror by default unless
	  development.  [ruby-core:52131] [Bug #7830]

Wed Feb 13 06:05:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Return BINARY strings from Gem.gzip and Gem.gunzip.
	  Fixes intermittent test failures.  RubyGems issue #450 by Jeremey
	  Kemper.
	* test/rubygems/test_gem.rb:  Test for the above.

Wed Feb 13 05:49:21 2013  Tanaka Akira  <akr@fsij.org>
