@@ -1,3 +1,8 @@
+Thu Feb 14 10:30:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_method.c: call method_removed hook on called class, not on
+	  prepending iclass.
+
 Thu Feb 14 10:05:57 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/net/http:  Do not handle Content-Encoding when the user sets
